// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> should match the default snapshot 1`] = `
<footer
  className="css-1ynevfo"
  role="contentinfo"
>
  <div
    className="css-fhubzv"
  >
    <div
      className="css-dzhhuw"
    >
      <div
        className="css-1g6dja6"
      >
        <svg
          className="css-11k3glg"
          focusable="false"
          height="17"
          role="presentation"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="css-7kp13n"
        >
          All content is available under the
           
          <a
            className="css-cy88lo"
            href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
            rel="license"
          >
            Open Government Licence v3.0
          </a>
          , except where otherwise stated
        </span>
      </div>
      <div
        className="css-3cr27l"
      >
        <a
          className="css-juj2a6"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>
`;

exports[`<Footer /> should match the with meta snapshot 1`] = `
<footer
  className="css-1ynevfo"
  role="contentinfo"
>
  <div
    className="css-fhubzv"
  >
    <div
      className="css-dzhhuw"
    >
      <div
        className="css-1g6dja6"
      >
        <h2
          className="css-a97mk7-StyledHeader-StyledHoc e4u1u2g0"
          size={undefined}
        >
          Support links
        </h2>
        <div
          className="css-z5k0ly"
        >
          <li>
            <a
              className="css-cy88lo"
              href="/help"
            >
              Help
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/cookies"
            >
              Cookies
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/contact"
            >
              Contact
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/terms-conditions"
            >
              Terms and conditions
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/welsh"
            >
              Rhestr o Wasanaethau Cymraeg
            </a>
          </li>
        </div>
        <div
          className="css-1n6hlla"
        >
          <div>
            Built by the 
            <a
              href="/gds"
            >
              Government Digital Service
            </a>
          </div>
        </div>
        <svg
          className="css-11k3glg"
          focusable="false"
          height="17"
          role="presentation"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="css-7kp13n"
        >
          All content is available under the
           
          <a
            className="css-cy88lo"
            href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
            rel="license"
          >
            Open Government Licence v3.0
          </a>
          , except where otherwise stated
        </span>
      </div>
      <div
        className="css-3cr27l"
      >
        <a
          className="css-juj2a6"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>
`;

exports[`<Footer /> should match the with navigation snapshot 1`] = `
<footer
  className="css-1ynevfo"
  role="contentinfo"
>
  <div
    className="css-fhubzv"
  >
    <div
      className="css-thb5ct"
    >
      <div
        className="css-cvoisk"
      >
        <h2
          className="css-1yris73-StyledHeader-StyledHoc e4u1u2g0"
          size="MEDIUM"
        >
          Services and information
        </h2>
        <ul
          className="css-1wreg1n"
        >
          <li>
            <a
              className="css-cy88lo"
              href="/benefits"
            >
              Benefits
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/births-deaths"
            >
              Births, deaths, marriages and care
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/business-self-employed"
            >
              Business and self-employed
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/childcare-parenting"
            >
              Childcare and parenting
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/citizenship"
            >
              Citizenship and living in the UK
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/crime-justice"
            >
              Crime, justice and the law
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/disabled-people"
            >
              Disabled people
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/driving-transport"
            >
              Driving and transport
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/education-learning"
            >
              Education and learning
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/employing-people"
            >
              Employing people
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/environment-countryside"
            >
              Environment and countryside
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/housing-local"
            >
              Housing and local services
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/money-tax"
            >
              Money and tax
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/passports-abroad"
            >
              Passports, travel and living abroad
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/visas-immigration"
            >
              Visas and immigration
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/working-pensions"
            >
              Working, jobs and pensions
            </a>
          </li>
        </ul>
      </div>
      <div
        className="css-cvoisk"
      >
        <h2
          className="css-1yris73-StyledHeader-StyledHoc e4u1u2g0"
          size="MEDIUM"
        >
          Departments and policy
        </h2>
        <ul
          className="css-ul2glb"
        >
          <li>
            <a
              className="css-cy88lo"
              href="/how-gov-works"
            >
              How government works
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/departments"
            >
              Departments
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/worldwide"
            >
              Worldwide
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/policies"
            >
              Policies
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/publications"
            >
              Publications
            </a>
          </li>
          <li>
            <a
              className="css-cy88lo"
              href="/announcements"
            >
              Announcements
            </a>
          </li>
        </ul>
      </div>
    </div>
    <hr
      className="css-uf3sj0"
    />
    <div
      className="css-dzhhuw"
    >
      <div
        className="css-1g6dja6"
      >
        <svg
          className="css-11k3glg"
          focusable="false"
          height="17"
          role="presentation"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="css-7kp13n"
        >
          All content is available under the
           
          <a
            className="css-cy88lo"
            href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
            rel="license"
          >
            Open Government Licence v3.0
          </a>
          , except where otherwise stated
        </span>
      </div>
      <div
        className="css-3cr27l"
      >
        <a
          className="css-juj2a6"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>
`;
